--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "www-textured-surface-shapes",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "strikerM <k_lite_07@yahoo.com>",
-  "license": "MIT"
+  "author": "strikerM",
+  "scripts": {
+    "build:dev": "webpack"
+  },
+  "dependencies": {
+    "@nasaworldwind/worldwind": "^0.9.0"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^3.1.0",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13"
+  }
 }
